--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "openbuildings/spiderling",
+	"name": "nggiahao/spiderling",
 	"description": "Crawl the web with kohana or phantomjs.",
 	"license": "BSD-3-Clause",
 	"authors": [
@@ -10,8 +10,8 @@
 		}
 	],
 	"require": {
-		"php": "^7.1",
-		"symfony/css-selector": "^2.3|^3.0",
+		"php": "^7.2.5",
+		"symfony/css-selector": "^3.0|^4.0|^5.0",
 		"openbuildings/environment-backup": "~0.1.1"
 	},
 	"require-dev": {
@@ -23,7 +23,7 @@
 	},
 	"config": {
 		"platform": {
-			"php": "7.1.8"
+			"php": "7.2.5"
 		}
 	}
 }
